@@ -368,6 +368,16 @@ New Breed Software</p>
 	  or displayed on a remote X-Window display.</p>
 	</dd>
 
+	<dt><code><b>nostamps=yes</b></code></dt>
+	<dd>
+	  <p>This option tells Tux&nbsp;Paint to not load any rubber stamp
+	  images, which in turn ends up disabling the <b>Stamps</b> tool.</p>
+
+	  <p>This can speed up Tux&nbsp;Paint when it first loads up,
+	  and reduce memory usage while it's running.  Of course, no stamps
+	  will be available at all.</p>
+	</dd>
+
 	<dt><code><b>savedir&nbsp;<i>DIRECTORY</i></b></code></dt>
 	<dd>
 	  <p>Use this option to change where Tux&nbsp;Paint saves pictures.
